--- a/aboutus.html
+++ b/aboutus.html
@@ -66,13 +66,20 @@
         </div>
     </nav>
     <!--/.Navbar -->
-    under maintainence
+<div class="card border-primary mb-3" >
+<div class="card-header">About us</div>
+<div class="card-body">
+<!-- <h5 class="card-title">Primary card title</h5> -->
+<p class="card-text">We are an online travel company in India providing a 'best in class' customer experience with the goal to be 'India's Travel Planner'. Through our website, travelers can explore, research, compare prices and book a wide range of services catering to their travel needs.
+We are dedicated to ensuring a superior user experience on our platform and a critical component of that is customer service. We provide customer support at all stages of our customer's journey – before, during and after. Our customer "touch-points" include our website across India addressing the needs of a large fragmented market of travel agents and a portfolio of B2E clients across India employing over 4 million people.
+</p>
+</div>
 
     <footer class="page-footer font-small blue">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+            <!-- <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a> -->
         </div>
         <!-- Copyright -->
 
