--- a/contactus.html
+++ b/contactus.html
@@ -66,13 +66,18 @@
         </div>
     </nav>
     <!--/.Navbar -->
-    under maintainence
+    <div class="card border-primary mb-3">
+      <div class="card-header">Contact</div>
+      <div class="card-body text">
+        <p class="card-text">Email assistance : alveenatabassum123@gmail.com <br>
+        Call/Chat support : 9026333420</p>
+      </div>
 
     <footer class="page-footer font-small blue">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+            <!-- <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a> -->
         </div>
         <!-- Copyright -->
 
