--- a/index.html
+++ b/index.html
@@ -763,9 +763,15 @@
                 <!-- Card content -->
                 <div class="card-body">
 
-                    <hr>
+                    <hr>EXCITING OFFERS YOU CAN AVAIL JUST BY A SINGLE CLICK!!
                     <!-- Text -->
-                    <h4 class="card-text">Play and Win exciting prizes and upto 50% off on bookings.</h4>
+                    <h6 class="card-text">
+
+                      To travel on a budget is the first and last wish of every person on this planet. No one ever said no to cheap airline tickets and affordable hotel packages. Online travel offers are really useful to get affordable trips and save loads of cash. Save money on family holiday, business trip, or simply a weekend getaway. Smart travel is a norm as we make this possible for our readers with the handpicked online travel deals. Checkout the lowest prices on domestic flights, international flights, hotels and more. We make the task much simpler for you with a huge collection of deals that are updated in real-time.
+
+                      Get Hold of best internet deals, no need to digging through every site to find what you are looking for. Each deal is unique in nature to suit a particular set of customer. No need to spend hours and hours looking for the best deals. What if you were told you could save more with Travel coupons. Look for the latest coupons to redeem on your travel to make bookings at a real affordable price. Get unbelievable discounts in some easy steps by applying coupons codes on your flight and hotel bookings. Lower your travel budget with the discount offers for a well deserved vacation.
+
+                      In this age of internet revolution, the opportunities presented are simply limitless. And you need not go any further, our collection of latest deals and promo codes is comprehensive. If you are looking for last minute travel deals, this is the right place with the best savings you could ever get. The website brings the results from hundreds of portals to give you the best deals. FreeKaaMaal is your one stop destination for all-around savings.</h4>
                     <!-- Link -->
                     <a href="#" class="black-text d-flex justify-content-end" data-toggle="modal" data-target="#modalLoginForm">
                         <h5>Attempt Quiz<i class="fas fa-angle-double-right"></i></h5>
