--- a/goa.html
+++ b/goa.html
@@ -50,13 +50,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">QnA</a>
+                    <a class="nav-link" href="qna.html"nA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="contactus.html">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto nav-flex-icons">
