--- a/home.html
+++ b/home.html
@@ -37,13 +37,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
+                    <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="qna.html">QnA</a>
+                    <a class="nav-link" href="#">QnA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contactus.html">Contact Us</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto nav-flex-icons">
